--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,167 @@
-.App {
-  text-align: center;
+* {
+  font-family:  sans-serif;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+button {
+  outline: none;
+  width: 100%;
+  padding: 15px 0;
+  color: #333;
+  font-size: 16px;
+  letter-spacing: 1px;
+  border: 0.5px solid #066BAE;
+  border-radius: 3;
+  background: #fff;
+  cursor: pointer;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+.login {
+  width: 100%;
   min-height: 100vh;
+  padding: 0 20px;
+  background: #e9e9e9;
+  display: flex;
+}
+.login-container h1{
+  font-size: xx-large;
+  color: #fff;
+}
+.login .login-container {
+  padding: 60px;
+  margin: auto;
+  width: 100%;
+  max-width: 520px;
+  min-height: 600px;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  background: radial-gradient(
+    ellipse at left bottom,
+    rgba(5, 107, 174, 1) 0%,
+    rgba(6, 107, 174, 0.9) 59%,
+    rgba(4, 107, 174, 0.9) 100%
+  );
+  box-shadow: 0 50px 70px -20px rgba(0, 0, 0, 0.8);
+}
+
+.login .login-container label {
   color: white;
+  margin: 14px 0;
+  display: block;
+  font-size: 22px;
+  line-height: 1;
 }
 
-.App-link {
-  color: #61dafb;
+.login .login-container input, .search-field {
+  width: 100%;
+  border: none;
+  outline: none;
+  font-size: 19px;
+  padding: 10px;
+  background: rgba(255, 255, 255, 0.945);
+  color: #333;
+  letter-spacing: 1px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.login .login-container .button-container {
+  width: 100%;
+  padding: 24px 0;
+}
+
+.login .login-container .button-container p {
+  margin: 14px 0 0 0;
+  text-align: right;
+  color: #fff;
+}
+
+.login .login-container .button-container p span {
+  color: yellow;
+  font-weight: 500;
+  letter-spacing: 0.5px;
+  margin-left: 5px;
+  cursor: pointer;
+  transition: all 400ms ease-in-out;
+}
+
+.login .login-container .button-container p span:hover {
+  color: red;
+}
+
+.login .login-container .error-message {
+  color: red;
+  font-size: 16px;
+}
+
+.container {
+  width: 100%;
+  padding: 14px 14px 4px 14px;
+  min-height: 100vh;
+  color: #fff;
+  background: radial-gradient(
+    ellipse at left bottom,
+    rgba(5, 107, 174, 1) 0%,
+    rgba(6, 107, 174, 0.9) 59%,
+    rgba(4, 107, 174, 0.9) 100%
+  );
+}
+
+.header nav {
+  background: #066BAE;
+  width: 100%;
+  padding: 20px 40px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.header nav h2 {
+  color: #fff;
+}
+
+.header nav button {
+  width: 86px;
+  padding: 8px 0;
+  background: #fff;
+}
+/* .search-field{
+  padding: 2px;
+  width: 100%;
+  border: none;
+} */
+.user-list, .user-posts, .home{
+  margin-top: 8px;
+  padding-top: 8px;
+  list-style: none;
+}
+.user-list li, .user-posts li{
+  display: block;
+  padding: 6px;
+  border: 1px solid #fff;
+}
+ .home a{
+  text-decoration: none;
+  color: #fff;
+  cursor: pointer;
+}
+.home li{
+  padding-top: 6px;
+}
+.user-posts .blog-post{
+  display: inline-block;
+  min-width: 600px;
+}
+
+.user-posts .user-name{
+  min-width: 240px;
+  display: inline-block;
+}
+
+.error-404{
+  background: #ffd454;
+  width: 100%;
+  padding: 14px 14px 4px 14px;
+  min-height: 100vh;
 }
